[package]
name = "png-optimizer-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
glob = "0.3.1"
log = "0.4.20"
log4rs = "1.2.0"
oxipng = "9.0.0"
